Fix wrong colour variable name in hero

--- a/SCSS/_hero.scss
+++ b/SCSS/_hero.scss
@@ -25,7 +25,7 @@
   &__shape {
     width: 50%;
     clip-path: polygon(100% 0, 10% 0, 100% 100%);
-    background-color: var(--purple);
+    background-color: $purple--1;
   }
 
   &__p-1 {
